objects/agf__ADM_Work__c.object
<CustomObject>
    <fields>
        <fullName>agf__Mobile_Device__c</fullName>
        <label>Mobile Device</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Android Other</fullName>
                </value>
                <value>
                    <fullName>Dell Windows Tablet</fullName>
                </value>
                <value>
                    <fullName>Galaxy 4</fullName>
                </value>
                <value>
                    <fullName>Galaxy 5</fullName>
                </value>
                <value>
                    <fullName>Galaxy Note 2</fullName>
                </value>
                <value>
                    <fullName>Galaxy Note3</fullName>
                </value>
                <value>
                    <fullName>Galaxy S3</fullName>
                </value>
                <value>
                    <fullName>HTC Windows Phone 8x</fullName>
                </value>
                <value>
                    <fullName>iOS Other</fullName>
                </value>
                <value>
                    <fullName>iPad 4</fullName>
                </value>
                <value>
                    <fullName>iPad Air</fullName>
                </value>
                <value>
                    <fullName>iPad Air 2</fullName>
                </value>
                <value>
                    <fullName>iPad Mini 4</fullName>
                </value>
                <value>
                    <fullName>iPad Pro</fullName>
                </value>
                <value>
                    <fullName>iPhone 5</fullName>
                </value>
                <value>
                    <fullName>iPhone 5S</fullName>
                </value>
                <value>
                    <fullName>iPhone 6</fullName>
                </value>
                <value>
                    <fullName>iPhone 6 Plus</fullName>
                </value>
                <value>
                    <fullName>iPhone 6S</fullName>
                </value>
                <value>
                    <fullName>iPhone 6S Plus</fullName>
                </value>
                <value>
                    <fullName>Nexus 10</fullName>
                </value>
                <value>
                    <fullName>Nexus 4</fullName>
                </value>
                <value>
                    <fullName>Nexus 5</fullName>
                </value>
                <value>
                    <fullName>Nexus 7</fullName>
                </value>
                <value>
                    <fullName>Nokia 1020</fullName>
                </value>
                <value>
                    <fullName>Nokia Lumia 1020</fullName>
                </value>
                <value>
                    <fullName>Nokia Lumia 1520</fullName>
                </value>
                <value>
                    <fullName>Nokia Lumia 635</fullName>
                </value>
                <value>
                    <fullName>Nokia Lumia 900</fullName>
                </value>
                <value>
                    <fullName>Nokia Lumia 920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Mobile_Network__c</fullName>
        <label>Mobile Network</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WiFi 4G/LTE</fullName>
                </value>
                <value>
                    <fullName>3G</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>Offline/Airplane mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Modules__c</fullName>
        <label>Module(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AccountAdmin</fullName>
                </value>
                <value>
                    <fullName>AccountApplication</fullName>
                </value>
                <value>
                    <fullName>AccountCopy</fullName>
                </value>
                <value>
                    <fullName>AccountNotificationLookup</fullName>
                </value>
                <value>
                    <fullName>AccountRenewal</fullName>
                </value>
                <value>
                    <fullName>AccountTypeConversionUtility</fullName>
                </value>
                <value>
                    <fullName>AccountUserAdmin</fullName>
                </value>
                <value>
                    <fullName>AccountUserPermissionAssignment</fullName>
                </value>
                <value>
                    <fullName>AkamaiUtility</fullName>
                </value>
                <value>
                    <fullName>AlohaLogin</fullName>
                </value>
                <value>
                    <fullName>APIAuthCheck</fullName>
                </value>
                <value>
                    <fullName>ApplicationAssignment</fullName>
                </value>
                <value>
                    <fullName>ApplySKUToAccount</fullName>
                </value>
                <value>
                    <fullName>AudienceBuilderConfig</fullName>
                </value>
                <value>
                    <fullName>AutomatedNotificationTemplateEditor</fullName>
                </value>
                <value>
                    <fullName>AutomationsConfig</fullName>
                </value>
                <value>
                    <fullName>BillingUtilizationType</fullName>
                </value>
                <value>
                    <fullName>BrandTagAssignment</fullName>
                </value>
                <value>
                    <fullName>BrandTags</fullName>
                </value>
                <value>
                    <fullName>BulkAccountCreate</fullName>
                </value>
                <value>
                    <fullName>BulkAccountCreateThreaded</fullName>
                </value>
                <value>
                    <fullName>BulkReturnPathIntegrator</fullName>
                </value>
                <value>
                    <fullName>BulkUserCreate</fullName>
                </value>
                <value>
                    <fullName>BulkUserSetup</fullName>
                </value>
                <value>
                    <fullName>BusinessRuleAdmin</fullName>
                </value>
                <value>
                    <fullName>BusinessRuleAssignment</fullName>
                </value>
                <value>
                    <fullName>BusinessRules</fullName>
                </value>
                <value>
                    <fullName>BusinessUnitRolesAndUsers</fullName>
                </value>
                <value>
                    <fullName>ClientSpecificConfigurationSettings</fullName>
                </value>
                <value>
                    <fullName>CreateDemo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Num_Of_Prod_Occ__c</fullName>
        <inlineHelpText>The number of production incidents associated with this Work record. May include out-of-memory errors or gacks.</inlineHelpText>
        <label>Production Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of cases associated with this Work record.</inlineHelpText>
        <label>Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Change_Lists__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Change Lists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Orgs_affected__c</fullName>
        <label>Number of Orgs affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_SLA_Violations__c</fullName>
        <label>Number of T&amp;P SLA Violations</label>
        <summaryFilterItems>
            <field>agf__SLA_Violation__c.agf__Type__c</field>
            <operation>notEqual</operation>
            <value>Support</value>
        </summaryFilterItems>
        <summaryForeignKey>agf__SLA_Violation__c.agf__Work__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Tests_Classes_affected__c</fullName>
        <label>Number of Tests/Classes affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Origin__c</fullName>
        <defaultValue>&apos;Outside&apos;</defaultValue>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Other_Recipients__c</fullName>
        <description>This field is used as a transport object. Do not use this field on list view criteria or reports!</description>
        <inlineHelpText>The name of a GUS user or any salesforce.com email address</inlineHelpText>
        <label>transfer Other Recipients</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Out_of_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Parent_ID__c</fullName>
        <inlineHelpText>Add the GUS Work ID of any parent work item.  Separate multiple work IDs with commas.  View and edit the relationship via the related list.</inlineHelpText>
        <label>Add Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Perforce_Status__c</fullName>
        <label>Source Control Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open Once</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Preserve_Formatting_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preserve Formatting Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Preserve_Formatting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preserve Formatting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Previous_Comments__c</fullName>
        <label>transfer Previous Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Default__c</fullName>
        <description>Used to store what the previous priority value might have been for reporting purposes.</description>
        <label>Priority (default)</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Mapping_Copy__c</fullName>
        <label>Priority Mapping Copy</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority Mapping</label>
        <referenceTo>agf__ADM_Priority_Mapping__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Override_Explanation_Copy__c</fullName>
        <description>used to temporarily store the contents of the priority override explanation to create a new record</description>
        <label>Priority Override Explanation Copy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Override_Explanation__c</fullName>
        <label>Priority Override Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Priority_Rank__c</fullName>
        <label>Backlog Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <inlineHelpText>For bugs, priority is automatically determined based upon the combination of Impact and Frequency.

For user stories, P0 represents the highest priority, P4 the lowest.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P0</fullName>
                    <color>#0B6FCE</color>
                    <label>P0</label>
                </value>
                <value>
                    <fullName>P1</fullName>
                    <color>#FF0000</color>
                    <label>P1</label>
                </value>
                <value>
                    <fullName>P2</fullName>
                    <color>#E27001</color>
                    <label>P2</label>
                </value>
                <value>
                    <fullName>P3</fullName>
                    <color>#FFFF66</color>
                    <label>P3</label>
                </value>
                <value>
                    <fullName>P4</fullName>
                    <color>#78C953</color>
                    <label>P4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Child__c</fullName>
        <description>Used only by the Clients team. Dependent on the Product Area picklist.</description>
        <inlineHelpText>Used only by the Clients team. Dependent on the Product Area picklist.</inlineHelpText>
        <label>Product Child</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AXIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Product_Tag_Name__c</fullName>
        <description>Returns the name of the product tag</description>
        <formula>agf__Product_Tag__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Tag Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipName>Product_Tag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QA_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Readme_Notes__c</fullName>
        <inlineHelpText>How would you explain the change to customers? Try not to give away internal details. Be as general as possible.</inlineHelpText>
        <label>Readme Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Record_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Record(Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Red_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Regressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Related_URL_Link__c</fullName>
        <formula>HYPERLINK(agf__Related_URL__c, agf__Related_URL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Related_URL__c</fullName>
        <label>Related URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Related_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to look up work items to create new ADM_Parent_Work__c relationships</description>
        <inlineHelpText>Used to look up work items to create new ADM_Parent_Work__c Parent/Child relationships only. This field is not meant to store any ids or values</inlineHelpText>
        <label>New Related Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Related_Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>agf__ADM_Release__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Request_RD_Mgr_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Senior Mgr Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Resolution__c</fullName>
        <inlineHelpText>App Bug Fix - TF caught a product bug&lt;br&gt;
TC: Due to app changes - Test changed b/c app behavior changed&lt;br&gt;
TC: Test issue only - Test needed fixing&lt;br&gt;
More: search Google Sites for &quot;test resolution&quot;</inlineHelpText>
        <label>Test Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Bug Fix</fullName>
                </value>
                <value>
                    <fullName>Test Change: Due to app changes</fullName>
                </value>
                <value>
                    <fullName>Test Change: Test issue only</fullName>
                </value>
                <value>
                    <fullName>Test Removed/Disabled</fullName>
                </value>
                <value>
                    <fullName>Duplicate Test Failure</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible: Autobuild environment issue</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible: SauceLabs issue</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible: Broken By Another Team</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible: Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible: Other (please specify in Chatter feed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Resolved_By__c</fullName>
        <label>Resolved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Resolved_On__c</fullName>
        <label>Resolved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Resolved__c</fullName>
        <formula>CASE( agf__Status__c, &quot;Fixed&quot;, 1, &quot;Tested&quot;, 1, &quot;Closed&quot;, 1, &quot;Completed&quot;, 1, &quot;Not Reproducible&quot;, 1, &quot;Not a bug&quot;, 1, &quot;Duplicate&quot;, 1,
&quot;Closed - Duplicate&quot;, 1, &quot;Closed - Known Bug Exists&quot;, 1, &quot;Never&quot;, 1,&quot;Closed-U/Ftest&quot;, 1, &quot;Closed-Untested&quot;, 1, &quot;QA In Progress&quot;, 1,
&quot;Closed - New Bug Logged&quot;, 1, &quot;Closed - No Fix - Working as Designed&quot;,1,
&quot;Closed - LAP Request Approved&quot;, 1, &quot;Closed - LAP Request Denied&quot;, 1, &quot;Closed - Resolved Without Code Change&quot;, 1,
&quot;Closed - No Fix - Feature Request&quot;,1, &quot;Closed - No Fix - Will Not Fix&quot;,1, &quot;Rejected&quot;, 1, &quot;Closed - Resolved With Internal Tools&quot;, 1, &quot;Closed - Defunct&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Root_Cause_Analysis_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to a related Root Cause Analysis record.</description>
        <label>Root Cause Analysis</label>
        <referenceTo>agf__RCA__c</referenceTo>
        <relationshipLabel>Work &amp; Action Plan</relationshipLabel>
        <relationshipName>Work1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__S1_App_Build_Number__c</fullName>
        <inlineHelpText>Find the build number in the settings of the S1 Hybrid app</inlineHelpText>
        <label>S1 App Build Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Copy__c</fullName>
        <label>Scheduled Build Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Name__c</fullName>
        <formula>agf__Scheduled_Build__r.Name</formula>
        <label>Scheduled Build Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build_Rank__c</fullName>
        <label>Rank in a scheduled build for team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Scheduled Build field is a lookup to the Build object.  Enter a pre-existing build where the change will be made.</inlineHelpText>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Work (Scheduled Build)</relationshipLabel>
        <relationshipName>Scheduled_Build</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_On__c</fullName>
        <description>Deprecated field from BF 1.0</description>
        <label>Scheduled On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Schema__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Schema Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Last_Modified__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Stores the last time the Scrum Team field was modified</description>
        <inlineHelpText>Stores the last time the Scrum Team field was modified</inlineHelpText>
        <label>Scrum Team Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team_Name__c</fullName>
        <formula>agf__Scrum_Team__r.Name</formula>
        <label>Scrum Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrumforce_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scrumforce ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Senior_Management_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who gets engaged when an escalation of the current investigation occurs</description>
        <inlineHelpText>The person who gets engaged when an escalation of the current investigation occurs</inlineHelpText>
        <label>Senior Management POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Copy__c</fullName>
        <label>Severity Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Severity_Level__c</fullName>
        <label>Severity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#000099</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#990000</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FF6600</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#F3D904</color>
                    <label>4</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Solution_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Overview</label>
        <referenceTo>agf__ADM_Solution_Overview__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Name__c</fullName>
        <formula>agf__Sprint__r.Name</formula>
        <label>Sprint Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Rank__c</fullName>
        <label>Rank of this work item in a sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Sprint_Timeframe__c</fullName>
        <description>The first 8 characters of the sprint name</description>
        <formula>trim(LEFT(agf__Sprint__r.Name,8))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Timeframe YYYY.MMx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Triaged</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>QA In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - Defunct</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Closed - Eng Internal</fullName>
                </value>
                <value>
                    <fullName>Closed - Known Bug Exists</fullName>
                </value>
                <value>
                    <fullName>Closed - New Bug Logged</fullName>
                </value>
                <value>
                    <fullName>Closed - LAP Request Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - LAP Request Denied</fullName>
                </value>
                <value>
                    <fullName>Closed - Resolved With Internal Tools</fullName>
                </value>
                <value>
                    <fullName>Closed - Resolved Without Code Change</fullName>
                </value>
                <value>
                    <fullName>Closed - No Fix - Working as Designed</fullName>
                </value>
                <value>
                    <fullName>Closed - No Fix - Feature Request</fullName>
                </value>
                <value>
                    <fullName>Closed - No Fix - Will Not Fix</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Integrate</fullName>
                </value>
                <value>
                    <fullName>Pending Release</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>More Info Reqd from Support</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Not a bug</fullName>
                </value>
                <value>
                    <fullName>Not Reproducible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Story_Status__c</fullName>
        <formula>IF( ISNULL(agf__Closed_On__c) , &quot;Open&quot;, &quot;Closed&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Subscribe_to_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe to Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__System_Test_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Test_Engineer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Target_Build__c</fullName>
        <label>Target Build</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Tech_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tech Writer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tech_Writer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Template_Description__c</fullName>
        <label>Template Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Test_Failure_Status__c</fullName>
        <label>Test Failure Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocking</fullName>
                </value>
                <value>
                    <fullName>Signed Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Test_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan</label>
        <referenceTo>agf__QA_Test_Plan__c</referenceTo>
        <relationshipLabel>Work</relationshipLabel>
        <relationshipName>Work</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>